--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2022 Totally legit
+-->
 <head>
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
