Making changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2022 Totally legit
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Amazing Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Content content content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Training 2014</p>
 	</footer>
 </body>
 </html>
